force-app/main/default/objects/Presentation__c/Presentation__c.object-meta.xml
<CustomObject>
    <label>Presentation</label>
    <nameField>
        <label>Presentation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Presentations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>