force-app/main/default/objects/Presentation__c/fields/Pathway_Level__c.field-meta.xml
<CustomField>
    <fullName>Pathway_Level__c</fullName>
    <inlineHelpText>None for non-pathways speech.</inlineHelpText>
    <label>Pathway Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>