force-app/main/default/objects/Presentation__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Toastmasters</fullName>
            </value>
            <value>
                <fullName>Another Toastmasters club</fullName>
            </value>
            <value>
                <fullName>Evening Stars</fullName>
            </value>
            <value>
                <fullName>Salesforce IT</fullName>
            </value>
            <value>
                <fullName>Salesforce Toastmasters</fullName>
            </value>
            <value>
                <fullName>SF Bilingual Cantonese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>