force-app/main/default/objects/Presentation__c/fields/YouTubeId__c.field-meta.xml
<CustomField>
    <fullName>YouTubeId__c</fullName>
    <label>YouTubeId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>