force-app/main/default/objects/Presentation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pathway_Level__c</columns>
    <columns>Venue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>